<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_layout"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="24dp"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context=".views.auth.AuthActivity">

...
